services/dashboard/ingress.yaml
# ------------------- Dashboard Ingress ------------------- #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  labels:
    traffic-type: internal
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: k8s.internal.hugocortes.me
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
